@@ -14,10 +14,12 @@ class ViewsExposedFormTest extends ViewsSqlTest {
   }
 
   public function setUp() {
-    parent::setUp('views', 'views_ui');
+    parent::setUp('views_ui');
     module_enable(array('views_ui'));
-    // Clear the module_implements cache.
-    module_implements('views_default_views', FALSE, TRUE);
+    // @TODO Figure out why it's required to clear the cache here.
+    views_module_include('views_default.inc', TRUE);
+    views_get_all_views(TRUE);
+    menu_rebuild();
   }
 
   /**
@@ -59,22 +61,22 @@ class ViewsExposedFormTest extends ViewsSqlTest {
     menu_rebuild();
     $edit = array();
 
-    $this->drupalGet('admin/build/views/nojs/config-item/test_exposed_admin_ui/default/filter/type');
+    $this->drupalGet('admin/structure/views/nojs/config-item/test_exposed_admin_ui/default/filter/type');
     // Be sure that the button is called exposed
     $this->helperButtonHasLabel('edit-options-expose-button-button', t('Expose'));
 
     // Click the Expose button.
-    $this->drupalPost('admin/build/views/nojs/config-item/test_exposed_admin_ui/default/filter/type', $edit, t('Expose'));
+    $this->drupalPost('admin/structure/views/nojs/config-item/test_exposed_admin_ui/default/filter/type', $edit, t('Expose'));
     // Check the label of the expose button
     $this->helperButtonHasLabel('edit-options-expose-button-button', t('Hide'));
 
     // Now check the sort criteria.
-    $this->drupalGet('admin/build/views/nojs/config-item/test_exposed_admin_ui/default/sort/created');
+    $this->drupalGet('admin/structure/views/nojs/config-item/test_exposed_admin_ui/default/sort/created');
     $this->helperButtonHasLabel('edit-options-expose-button-button', t('Expose'));
     $this->assertNoFieldById('edit-options-expose-label', '', t('Take sure no label field is shown'));
 
     // Click the Expose button.
-    $this->drupalPost('admin/build/views/nojs/config-item/test_exposed_admin_ui/default/sort/created', $edit, t('Expose'));
+    $this->drupalPost('admin/structure/views/nojs/config-item/test_exposed_admin_ui/default/sort/created', $edit, t('Expose'));
     // Check the label of the expose button
     $this->helperButtonHasLabel('edit-options-expose-button-button', t('Hide'));
     $this->assertFieldById('edit-options-expose-label', '', t('Take sure a label field is shown'));
