@@ -18,7 +18,7 @@ function views_test_permission() {
  */
 function views_test_views_api() {
   return array(
-    'api' => 2.0,
+    'api' => '3.0-alpha1',
   );
 }
 
